[package]
name = "iced_table"
version = "0.13.99"
edition = "2021"
authors = ["tarkah <admin@tarkah.dev>"]
description = "A table widget for Iced"
license = "MIT"
repository = "https://github.com/tarkah/iced_table"

[workspace]
default-members = [
  "./example"
]
members = [
  ".",
  "./example",
]

[features]
__docs = ["iced_widget/lazy"]

[dependencies]
#iced_core = "0.13.99"
#iced_widget = "0.13.99"
iced_core = { git = "https://github.com/project-gauntlet/iced.git", branch = "gauntlet-0.13" }
iced_widget = { git = "https://github.com/project-gauntlet/iced.git", branch = "gauntlet-0.13" }

[package.metadata.docs.rs]
all-features = true
